# floatprompt

./: .gitignore  CLAUDE.md  FLOAT.md  LICENSE  MAINTENANCE.md  README.md  _float-system.md  _float.md  _system.md  float-system.md  float.md  floatdoc.md  floatprompt-complete-history.bundle  floatprompt.fp.txt  index.md  lesson_companion_guide.md  package-lock.json  package.json  system.md  tsconfig.json  website.html
.claude/: settings.json
.claude-plugin/: marketplace.json
.float/: FLOAT.md  boot-draft.md  float-project.md  float-system.md  float.db  handoff.md  project.md  system.md
.float-manual/: boot.md  overview.md  problem.md
.float-old/: README.md
.float-wip/: float.db
.float-workshop/: README.md  _1_next.md  _2_focus.md  _3_review.md  _temp-work.md  workshop.md
_float/: index.md  system.md
artifacts/: 2025-07-18-floatprompt-strategic-positioning-breakthrough-minimal.fp.txt  2025-10-06-claude-sonnect-4.5-assessment.txt  2025-10-30-claude-sonnect-4.5-assessment.txt  2025-12-28-cursor-context-build-path.md  2025-12-28-cursor-summary.md  2025-12-31-ai-wants-this.md  2026-01-03-x-ethan-mollick.md  2026-01-04-buoy-recon.md  Cartographer first update.md  _README.md  _float.md  alex-first-user-experience-analysis.md  external workspace architecture.md  float-buoys-commands-spec.md  float-buoys-context.md  float-buoys-daemon-spec.md  float-buoys-spec.md  float-command-system-plan.md  (+30 more)
scanner/: .gitignore  Cargo.toml  RUST-PROGRESS.md  package-lock.json  package.json  scan-cli.js
scanner/src/: cache.rs  db.rs  hasher.rs  lib.rs  merkle.rs  walker.rs
(+1259 files in other folders)
