[package]
name = "float-scanner"
version = "0.1.0"
edition = "2021"
description = "Merkle tree scanner for FloatPrompt - O(log n) change detection"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
sha2 = "0.10"
walkdir = "2"
ignore = "0.4"
rayon = "1.8"
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
